--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <h3 class="text-3xl font-bold text-center text-gray-800 mb-12">Featured Products</h3>
                 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8">
                     <div class="bg-white p-6 rounded-lg shadow hover:shadow-lg transition">
-                        <img src="../pic/computer-1867758_1920.jpg" alt="Product 1" class="w-full h-48 object-cover rounded mb-4">
+                        <img src="./pcomputer-1867758_1920.jpg" alt="Product 1" class="w-full h-48 object-cover rounded mb-4">
                         <h4 class="text-xl font-semibold mb-2">Product 1</h4>
                         <p class="text-gray-600 mb-4">High-quality innovative solution for your needs.</p>
                         <a href="#" class="bg-blue-500 text-white py-2 px-4 rounded hover:bg-blue-600">Learn More</a>
